# opencv-basics

./: CMakeLists.txt  Readme.md
src/: 1-basics.cpp  2-resize.cpp  3-draw.cpp  3-warp.cpp  4-color-detection.cpp  5-shapes-detection.cpp  6-face-detection.cpp  7-motion-detection.cpp  main.cpp
